--- a/aboutme.css
+++ b/aboutme.css
@@ -13,23 +13,24 @@ body {
   body .left {
     width: 40%; }
     body .left img {
-      max-width: 100%; }
+      object-fit: cover;
+      height: 100vh; }
   body .right {
     padding: 20px 80px;
     flex-grow: 1; }
 
 .head {
   text-align: center;
-  padding: 1rem 0; }
+  margin: 2rem 0 4rem 0; }
   .head h1 {
-    margin-bottom: 1rem;
     color: #ffde08;
     text-shadow: 1px 1px #adb8b5; }
   .head p {
     text-transform: uppercase;
     letter-spacing: 1px;
     margin: 0;
-    font-size: 14px; }
+    font-size: 14px;
+    font-weight: bold; }
 
 h1 {
   font-size: 500%;
@@ -53,3 +54,22 @@ h2 {
 
 .intro {
   font-size: 24px; }
+
+.social-links {
+  display: flex;
+  width: 650px;
+  margin: 2rem auto;
+  font-size: 12px;
+  opacity: 0.7; }
+  .social-links > div {
+    flex-grow: 1;
+    display: flex;
+    align-items: center; }
+    .social-links > div .icon {
+      margin-right: 0.25rem; }
+
+.intro {
+  margin-bottom: 4rem; }
+
+.intro p::first-letter {
+  font-size: 40px; }
