--- a/scss/site.scss
+++ b/scss/site.scss
@@ -1,19 +1,32 @@
-$heading-font-family:       'Bebas Neue', cursive;
-$body-font-family:          'PT Sans', sans-serif;
-
-$body-bg-color:             #fafafa;
-$body-color:                #636363;
-$h1-color:                  #adb8b5;
-
-$heading-letter-spacing:    2px;
+$heading-font-family:         'Bebas Neue', cursive;
+$body-font-family:            'PT Sans', sans-serif;
+$base-font-size:              16px;
+$brand-color:                 #ffde08;
+$body-bg-color:               #fafafa;
+$body-color:                  #636363;
+$h1-color:                    #adb8b5;
+$heading-letter-spacing:      2px;
 
 :root {
-  font-size: 16px;
+  font-size: $base-font-size;
 }
 
-body {
-  padding: 0;
-  margin: 0;
+h1 {
+  font-size: 500%;
+  color: $h1-color;
+  margin-bottom: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: $heading-font-family;
+  letter-spacing: $heading-letter-spacing;
+  margin-top: 0;
+}
+
+h2 {
+  border-bottom: dashed 4px $brand-color;
+  font-size: 200%;
+  color: $h1-color;
 }
 
 body {
@@ -21,6 +34,8 @@ body {
   background-color: $body-bg-color;
   color: $body-color;
   display: flex;
+  padding: 0;
+  margin: 0;
 
   .left {
     width: 40%;
@@ -32,125 +47,105 @@ body {
   }
 
   .right {
-    padding: 20px 80px;
+    padding: 1.25rem 5rem;
     flex-grow: 1;
   }
-}
 
-.head {
-  text-align: center;
-  margin: 2rem 0 4rem 0;
+  .head {
+    text-align: center;
+    margin: 2rem 0 4rem 0;
 
-  h1 {
-    color: #ffde08;
-    text-shadow: 1px 1px $h1-color;
+    h1 {
+      color: $brand-color;
+      text-shadow: 1px 1px $h1-color;
+    }
+
+    p {
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      margin: 0;
+      font-size: 0.875rem;
+      font-weight: bold;
+    }
   }
 
-  p {
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    margin: 0;
-    font-size: 14px;
-    font-weight: bold;
+  .section {
+    margin-bottom: 4rem;
   }
-}
 
-h1 {
-  font-size: 500%;
-  color: $h1-color;
-}
+  .intro {
+    margin-bottom: 4rem;
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: $heading-font-family;
-  letter-spacing: $heading-letter-spacing;
-  margin-top: 0;
-}
+    p {
+      font-size: 1.5rem;
+    }
 
-h1 {
-  margin-bottom: 0;
-}
+    p::first-letter {
+      font-size: 2.5rem;
+      font-family: $heading-font-family;
+    }
+  }
 
-h2 {
-  border-bottom: dashed 4px #ffde08;
-  font-size: 200%;
-  color: $h1-color;
-}
-
-.section {
-  margin-bottom: 4rem;
-}
-
-.intro {
-  font-size: 24px;
-}
-
-.social-links {
-  display: flex;
-  width: 650px;
-  margin: 2rem auto;
-  font-size: 12px;
-  opacity: 0.7;
-
-  > div {
-    flex-grow: 1;
+  .social-links {
     display: flex;
-    align-items: center;
+    width: 40.625rem;
+    margin: 2rem auto;
+    font-size: 0.75rem;
+    opacity: 0.7;
 
-    .icon {
-      margin-right: 0.25rem;
+    > div {
+      flex-grow: 1;
+      display: flex;
+      align-items: center;
+
+      .icon {
+        margin-right: 0.25rem;
+      }
     }
   }
-}
 
-.intro {
-  margin-bottom: 4rem;
-}
+  .chips {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: .75rem;
 
-.intro p::first-letter {
-  font-size: 40px;
-}
-
-.chips {
-  display: flex;
-  flex-wrap: wrap;
-  font-size: .75rem;
-
-  .chip {
-    cursor: pointer;
-    background: #ffde08;
-    border-radius: 3px 0 0 3px;
-    color: #666;
-    display: inline-block;
-    height: 1.625rem;
-    line-height: 1.625rem;
-    padding: 0 1rem 0 1.25rem;
-    position: relative;
-    margin: .625rem .5rem 0 0;
-    transition: all .25s;
-
-    &::before {
-      background: #fff;
-      border-radius: .625rem;
-      box-shadow: inset 0 1px rgba(0,0,0,.25);
-      content: '';
-      height: .375rem;
-      left: .5rem;
-      position: absolute;
-      width: .375rem;
-      top: .65rem;
+    .chip {
+      cursor: pointer;
+      background: $body-color;
+      border-radius: 3px 0 0 3px;
+      color: $body-bg-color;
+      display: inline-block;
+      height: 1.625rem;
+      line-height: 1.625rem;
+      padding: 0 1rem 0 1.25rem;
+      position: relative;
+      margin: .625rem .5rem 0 0;
       transition: all .25s;
-    }
 
-    &::after {
-      background: #fff;
-      border-bottom: .8125rem solid transparent;
-      border-left: .625rem solid #ffde08;
-      border-top: .8125rem solid transparent;
-      content: '';
-      position: absolute;
-      right: 0;
-      top: 0;
-      transition: all .25s;
+      &::before {
+        background: $body-bg-color;
+        border-radius: .625rem;
+        box-shadow: inset 0 1px rgba(0,0,0,.25);
+        content: '';
+        height: .375rem;
+        left: .5rem;
+        position: absolute;
+        width: .375rem;
+        top: .65rem;
+        transition: all .25s;
+      }
+
+      &::after {
+        background: $body-bg-color;
+        border-bottom: .8125rem solid transparent;
+        border-left: .625rem solid $body-color;
+        border-top: .8125rem solid transparent;
+        content: '';
+        position: absolute;
+        right: 0;
+        top: 0;
+        transition: all .25s;
+      }
     }
   }
 }
