--- a/scss/site.scss
+++ b/scss/site.scss
@@ -53,16 +53,20 @@ body {
 
   .left {
     width: 40%;
+    box-shadow: 5px 0 5px -5px #ccc;
+    position: fixed;
 
     img {
       object-fit: cover;
       height: 100vh;
+      position: fixed;
     }
   }
 
   .right {
     padding: 1.25rem 5rem;
     flex-grow: 1;
+    margin-left: 40%;
   }
 
   .head {
@@ -85,6 +89,10 @@ body {
 
   .section {
     margin-bottom: 4rem;
+
+    h3, h4 {
+      margin-bottom: 0;
+    }
 
     .top-row {
       display: flex;
@@ -117,8 +125,44 @@ body {
       font-size: 0.875rem;
     }
 
-    h3, h4 {
-      margin-bottom: 0;
+    .language-table {
+      width: 500px;
+      border: solid 1px #eee;
+      border-radius: 5px;
+
+      thead {
+        th {
+          text-align: center;
+          border-bottom: solid 1px #eee;
+          padding: 10px;
+        }
+      }
+
+      tbody {
+        td {
+          padding: 10px;
+        }
+
+        td.center {
+          text-align: center;
+        }
+      }
+    }
+
+    .interests {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+
+      li {
+        padding: 5px 8px;
+        background-color: rgba(255, 222, 8, 0.5);
+        margin-right: 1rem;
+        border-radius: 5px;
+        margin-bottom: 0.5rem;
+      }
     }
   }
 
@@ -136,9 +180,8 @@ body {
   }
 
   .social-links {
-    display: flex;
-    width: 40.625rem;
-    margin: 2rem auto;
+    display: inline-flex;
+    margin: 3rem auto 2rem auto;
     font-size: 0.75rem;
     opacity: 0.7;
 
@@ -147,8 +190,21 @@ body {
       display: flex;
       align-items: center;
 
+      &:after {
+        content: "|";
+        padding-right: 1.5rem;
+        padding-left: 1.5rem;
+      }
+
       .icon {
         margin-right: 0.25rem;
+      }
+
+      &:last-child {
+        &:after {
+          content: '';
+          padding: 0;
+        }
       }
     }
   }
