--- a/aboutme.css
+++ b/aboutme.css
@@ -31,13 +31,15 @@ body {
   padding: 0;
   margin: 0; }
   body .left {
-    width: 40%;
-    box-shadow: 5px 0 5px -5px #ccc; }
-    body .left img {
-      object-fit: cover;
-      height: 100vh; }
+    width: 42.86%;
+    height: 100vh;
+    box-shadow: 5px 0 5px -5px #ccc;
+    background-image: url("https://images.unsplash.com/flagged/photo-1563536310477-c7b4e3a800c2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1834&q=80");
+    background-size: cover;
+    position: fixed; }
   body .right {
     padding: 1.333rem 5.61rem;
+    margin-left: 42.86%;
     flex-grow: 1; }
   body .head {
     text-align: center;
