--- a/aboutme.css
+++ b/aboutme.css
@@ -59,9 +59,10 @@ body {
       display: inline-flex;
       margin: 3.157rem auto 1.777rem auto;
       font-size: 0.75rem;
+      flex-wrap: wrap;
+      justify-content: center;
       opacity: 0.7; }
       body .head .social-links > div {
-        flex-grow: 1;
         display: flex;
         align-items: center; }
         body .head .social-links > div:after {
