--- a/aboutme.css
+++ b/aboutme.css
@@ -43,133 +43,159 @@ body {
   body .right {
     padding: 1.333rem 5.61rem;
     flex-grow: 1; }
-  body .head {
-    text-align: center;
-    margin: 2.369rem 0 4.209rem 0; }
-    body .head h1 {
-      color: #ffde08;
-      text-shadow: 1px 1px #adb8b5; }
-    body .head p {
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      margin: 0;
-      font-size: 1rem;
-      font-weight: bold; }
-    body .head .social-links {
-      display: inline-flex;
-      margin: 3.157rem auto 1.777rem auto;
-      font-size: 0.75rem;
-      flex-wrap: wrap;
-      justify-content: center;
-      opacity: 0.7; }
-      body .head .social-links > div {
+    body .right .scrim {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background-color: #262626;
+      z-index: 1;
+      opacity: 0.3; }
+    body .right .head {
+      text-align: center;
+      margin: 2.369rem 0 4.209rem 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 2; }
+      body .right .head h1 {
+        color: #ffde08;
+        text-shadow: 1px 1px #adb8b5; }
+      body .right .head p {
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        margin: 0;
+        font-size: 1rem;
+        font-weight: bold;
+        color: #f2f2f2; }
+      body .right .head .social-links {
+        display: inline-flex;
+        margin: 3.157rem auto 1.777rem auto;
+        font-size: 0.75rem;
+        flex-wrap: wrap;
+        justify-content: center;
+        color: #f2f2f2; }
+        body .right .head .social-links > div {
+          display: flex;
+          align-items: center; }
+          body .right .head .social-links > div:after {
+            content: "|";
+            padding-right: 1.333rem;
+            padding-left: 1.333rem; }
+          body .right .head .social-links > div .icon {
+            margin-right: 0.25rem; }
+          body .right .head .social-links > div:last-child:after {
+            content: '';
+            padding: 0; }
+    @media only screen and (min-width: 1280px) {
+      body .right .scrim {
+        display: none; }
+      body .right .head {
+        position: static; }
+        body .right .head p {
+          color: inherit; }
+        body .right .head .social-links {
+          color: inherit;
+          opacity: 0.7; } }
+    body .right .section {
+      margin-bottom: 4.209rem; }
+      body .right .section h3, body .right .section h4 {
+        margin-bottom: 0; }
+      body .right .section .top-row {
         display: flex;
-        align-items: center; }
-        body .head .social-links > div:after {
-          content: "|";
-          padding-right: 1.333rem;
-          padding-left: 1.333rem; }
-        body .head .social-links > div .icon {
-          margin-right: 0.25rem; }
-        body .head .social-links > div:last-child:after {
+        align-items: center;
+        margin-bottom: 1rem; }
+        body .right .section .top-row > * {
+          flex-grow: 1; }
+      body .right .section .experience, body .right .section .education {
+        margin-bottom: 3.157rem; }
+      body .right .section .experience .manager {
+        font-size: 0.75rem;
+        color: #909e9a; }
+        body .right .section .experience .manager span:first-child {
+          font-weight: bold; }
+        body .right .section .experience .manager span:last-child {
+          font-style: italic; }
+      body .right .section .duration {
+        text-align: right;
+        font-size: 0.75rem;
+        color: #909e9a; }
+      body .right .section .language-table {
+        width: 500px;
+        border: solid 1px #eee;
+        border-radius: 5px; }
+        body .right .section .language-table thead th {
+          text-align: center;
+          border-bottom: solid 1px #eee;
+          padding: 10px; }
+        body .right .section .language-table tbody td {
+          padding: 10px; }
+        body .right .section .language-table tbody td.center {
+          text-align: center; }
+      body .right .section .interests {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap; }
+        body .right .section .interests li {
+          padding: 5px 8px;
+          background-color: rgba(255, 222, 8, 0.5);
+          margin-right: 1rem;
+          border-radius: 5px;
+          margin-bottom: 0.5rem; }
+    body .right .intro {
+      margin-bottom: 4rem; }
+      body .right .intro p {
+        font-size: 1.5rem; }
+      body .right .intro p::first-letter {
+        font-size: 2.5rem;
+        font-family: "Bebas Neue", cursive; }
+    body .right .chips {
+      display: flex;
+      flex-wrap: wrap;
+      font-size: 0.75rem; }
+      body .right .chips .chip {
+        cursor: pointer;
+        background: #636363;
+        border-radius: 3px 0 0 3px;
+        color: #fafafa;
+        display: inline-block;
+        height: 1.625rem;
+        line-height: 1.625rem;
+        padding: 0 1rem 0 1.25rem;
+        position: relative;
+        margin: .625rem .5rem 0 0;
+        transition: all .25s; }
+        body .right .chips .chip::before {
+          background: #fafafa;
+          border-radius: .625rem;
+          box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
           content: '';
-          padding: 0; }
-  body .section {
-    margin-bottom: 4.209rem; }
-    body .section h3, body .section h4 {
-      margin-bottom: 0; }
-    body .section .top-row {
-      display: flex;
-      align-items: center;
-      margin-bottom: 1rem; }
-      body .section .top-row > * {
-        flex-grow: 1; }
-    body .section .experience, body .section .education {
-      margin-bottom: 3.157rem; }
-    body .section .experience .manager {
-      font-size: 0.75rem;
-      color: #909e9a; }
-      body .section .experience .manager span:first-child {
-        font-weight: bold; }
-      body .section .experience .manager span:last-child {
-        font-style: italic; }
-    body .section .duration {
-      text-align: right;
-      font-size: 0.75rem;
-      color: #909e9a; }
-    body .section .language-table {
-      width: 500px;
-      border: solid 1px #eee;
-      border-radius: 5px; }
-      body .section .language-table thead th {
-        text-align: center;
-        border-bottom: solid 1px #eee;
-        padding: 10px; }
-      body .section .language-table tbody td {
-        padding: 10px; }
-      body .section .language-table tbody td.center {
-        text-align: center; }
-    body .section .interests {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-wrap: wrap; }
-      body .section .interests li {
-        padding: 5px 8px;
-        background-color: rgba(255, 222, 8, 0.5);
-        margin-right: 1rem;
-        border-radius: 5px;
-        margin-bottom: 0.5rem; }
-  body .intro {
-    margin-bottom: 4rem; }
-    body .intro p {
-      font-size: 1.5rem; }
-    body .intro p::first-letter {
-      font-size: 2.5rem;
-      font-family: "Bebas Neue", cursive; }
-  body .chips {
-    display: flex;
-    flex-wrap: wrap;
-    font-size: 0.75rem; }
-    body .chips .chip {
-      cursor: pointer;
-      background: #636363;
-      border-radius: 3px 0 0 3px;
-      color: #fafafa;
-      display: inline-block;
-      height: 1.625rem;
-      line-height: 1.625rem;
-      padding: 0 1rem 0 1.25rem;
-      position: relative;
-      margin: .625rem .5rem 0 0;
-      transition: all .25s; }
-      body .chips .chip::before {
-        background: #fafafa;
-        border-radius: .625rem;
-        box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
-        content: '';
-        height: .375rem;
-        left: .5rem;
-        position: absolute;
-        width: .375rem;
-        top: .65rem;
-        transition: all .25s; }
-      body .chips .chip::after {
-        background: #fafafa;
-        border-bottom: .8125rem solid transparent;
-        border-left: 0.625rem solid #636363;
-        border-top: .8125rem solid transparent;
-        content: '';
-        position: absolute;
-        right: 0;
-        top: 0;
-        transition: all .25s; }
-      body .chips .chip:hover {
-        background-color: #ffde08;
-        color: #636363; }
-        body .chips .chip:hover::after {
-          border-left: 0.625rem solid #ffde08; }
+          height: .375rem;
+          left: .5rem;
+          position: absolute;
+          width: .375rem;
+          top: .65rem;
+          transition: all .25s; }
+        body .right .chips .chip::after {
+          background: #fafafa;
+          border-bottom: .8125rem solid transparent;
+          border-left: 0.625rem solid #636363;
+          border-top: .8125rem solid transparent;
+          content: '';
+          position: absolute;
+          right: 0;
+          top: 0;
+          transition: all .25s; }
+        body .right .chips .chip:hover {
+          background-color: #ffde08;
+          color: #636363; }
+          body .right .chips .chip:hover::after {
+            border-left: 0.625rem solid #ffde08; }
 
 @media only screen and (min-width: 1280px) {
   body {
