--- a/scss/site.scss
+++ b/scss/site.scss
@@ -22,6 +22,9 @@ $dove-gray:                   #636363;
 $edward:                      #adb8b5;
 $pewter:                      #909e9a;
 
+$white:                       #ffffff;
+$black:                       #000000;
+
 $h1-font-size:                $x5l-size;
 $h2-font-size:                $xxl-size;
 $h3-font-size:                $lg-size;
@@ -89,202 +92,239 @@ body {
   .right {
     padding: $lg-size $x5l-size;
     flex-grow: 1;
-  }
 
-  .head {
-    text-align: center;
-    margin: $xxl-size 0 $x4l-size 0;
-
-    h1 {
-      color: $yellow;
-      text-shadow: 1px 1px $edward;
+    .scrim {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background-color: lighten($black, 15%);
+      z-index: 1;
+      opacity: 0.3;
     }
 
-    p {
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      margin: 0;
-      font-size: $md-size;
-      font-weight: bold;
-    }
+    .head {
+      text-align: center;
+      margin: $xxl-size 0 $x4l-size 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 2;
 
-    .social-links {
-      display: inline-flex;
-      margin: $xxxl-size auto $xl-size auto;
-      font-size: $sm-size;
-      flex-wrap: wrap;
-      justify-content: center;
-      opacity: 0.7;
+      h1 {
+        color: $yellow;
+        text-shadow: 1px 1px $edward;
+      }
 
-      > div {
-        display: flex;
-        align-items: center;
+      p {
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        margin: 0;
+        font-size: $md-size;
+        font-weight: bold;
+        color: darken($white, 5%);
+      }
 
-        &:after {
-          content: "|";
-          padding-right: $lg-size;
-          padding-left: $lg-size;
-        }
+      .social-links {
+        display: inline-flex;
+        margin: $xxxl-size auto $xl-size auto;
+        font-size: $sm-size;
+        flex-wrap: wrap;
+        justify-content: center;
+        color: darken($white, 5%);
 
-        .icon {
-          margin-right: 0.25rem;
-        }
+        > div {
+          display: flex;
+          align-items: center;
 
-        &:last-child {
           &:after {
-            content: '';
-            padding: 0;
+            content: "|";
+            padding-right: $lg-size;
+            padding-left: $lg-size;
+          }
+
+          .icon {
+            margin-right: 0.25rem;
+          }
+
+          &:last-child {
+            &:after {
+              content: '';
+              padding: 0;
+            }
           }
         }
       }
     }
-  }
 
-  .section {
-    margin-bottom: $x4l-size;
+    @media only screen and (min-width: $tablet) {
+      .scrim {
+        display: none;
+      }
 
-    h3, h4 {
-      margin-bottom: 0;
-    }
+      .head {
+        position: static;
 
-    .top-row {
-      display: flex;
-      align-items: center;
-      margin-bottom: 1rem;
+        p {
+          color: inherit;
+        }
 
-      > * {
-        flex-grow: 1;
+        .social-links {
+          color: inherit;
+          opacity: 0.7;;
+        }
       }
     }
 
-    .experience, .education {
-      margin-bottom: $xxxl-size;
-    }
+    .section {
+      margin-bottom: $x4l-size;
 
-    .experience {
-      .manager {
+      h3, h4 {
+        margin-bottom: 0;
+      }
+
+      .top-row {
+        display: flex;
+        align-items: center;
+        margin-bottom: 1rem;
+
+        > * {
+          flex-grow: 1;
+        }
+      }
+
+      .experience, .education {
+        margin-bottom: $xxxl-size;
+      }
+
+      .experience {
+        .manager {
+          font-size: $sm-size;
+          color: $pewter;
+
+          span:first-child {
+            font-weight: bold;
+          }
+
+          span:last-child {
+            font-style: italic;
+          }
+        }
+      }
+
+      .duration {
+        text-align: right;
         font-size: $sm-size;
         color: $pewter;
+      }
 
-        span:first-child {
-          font-weight: bold;
+      .language-table {
+        width: 500px;
+        border: solid 1px #eee;
+        border-radius: 5px;
+
+        thead {
+          th {
+            text-align: center;
+            border-bottom: solid 1px #eee;
+            padding: 10px;
+          }
         }
 
-        span:last-child {
-          font-style: italic;
+        tbody {
+          td {
+            padding: 10px;
+          }
+
+          td.center {
+            text-align: center;
+          }
+        }
+      }
+
+      .interests {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
+
+        li {
+          padding: 5px 8px;
+          background-color: rgba(255, 222, 8, 0.5);
+          margin-right: 1rem;
+          border-radius: 5px;
+          margin-bottom: 0.5rem;
         }
       }
     }
 
-    .duration {
-      text-align: right;
-      font-size: $sm-size;
-      color: $pewter;
-    }
+    .intro {
+      margin-bottom: 4rem;
 
-    .language-table {
-      width: 500px;
-      border: solid 1px #eee;
-      border-radius: 5px;
-
-      thead {
-        th {
-          text-align: center;
-          border-bottom: solid 1px #eee;
-          padding: 10px;
-        }
+      p {
+        font-size: 1.5rem;
       }
 
-      tbody {
-        td {
-          padding: 10px;
-        }
-
-        td.center {
-          text-align: center;
-        }
+      p::first-letter {
+        font-size: 2.5rem;
+        font-family: $heading-font-family;
       }
     }
 
-    .interests {
-      list-style: none;
-      margin: 0;
-      padding: 0;
+    .chips {
       display: flex;
       flex-wrap: wrap;
+      font-size: $sm-size;
 
-      li {
-        padding: 5px 8px;
-        background-color: rgba(255, 222, 8, 0.5);
-        margin-right: 1rem;
-        border-radius: 5px;
-        margin-bottom: 0.5rem;
-      }
-    }
-  }
-
-  .intro {
-    margin-bottom: 4rem;
-
-    p {
-      font-size: 1.5rem;
-    }
-
-    p::first-letter {
-      font-size: 2.5rem;
-      font-family: $heading-font-family;
-    }
-  }
-
-  .chips {
-    display: flex;
-    flex-wrap: wrap;
-    font-size: $sm-size;
-
-    .chip {
-      cursor: pointer;
-      background: $dove-gray;
-      border-radius: 3px 0 0 3px;
-      color: $alabaster;
-      display: inline-block;
-      height: 1.625rem;
-      line-height: 1.625rem;
-      padding: 0 1rem 0 1.25rem;
-      position: relative;
-      margin: .625rem .5rem 0 0;
-      transition: all .25s;
-
-      &::before {
-        background: $alabaster;
-        border-radius: .625rem;
-        box-shadow: inset 0 1px rgba(0,0,0,.25);
-        content: '';
-        height: .375rem;
-        left: .5rem;
-        position: absolute;
-        width: .375rem;
-        top: .65rem;
+      .chip {
+        cursor: pointer;
+        background: $dove-gray;
+        border-radius: 3px 0 0 3px;
+        color: $alabaster;
+        display: inline-block;
+        height: 1.625rem;
+        line-height: 1.625rem;
+        padding: 0 1rem 0 1.25rem;
+        position: relative;
+        margin: .625rem .5rem 0 0;
         transition: all .25s;
-      }
 
-      &::after {
-        background: $alabaster;
-        border-bottom: .8125rem solid transparent;
-        border-left: .625rem solid $dove-gray;
-        border-top: .8125rem solid transparent;
-        content: '';
-        position: absolute;
-        right: 0;
-        top: 0;
-        transition: all .25s;
-      }
-
-      &:hover {
-        background-color: $yellow;
-        color: $dove-gray;
+        &::before {
+          background: $alabaster;
+          border-radius: .625rem;
+          box-shadow: inset 0 1px rgba(0,0,0,.25);
+          content: '';
+          height: .375rem;
+          left: .5rem;
+          position: absolute;
+          width: .375rem;
+          top: .65rem;
+          transition: all .25s;
+        }
 
         &::after {
-          border-left: .625rem solid $yellow;
+          background: $alabaster;
+          border-bottom: .8125rem solid transparent;
+          border-left: .625rem solid $dove-gray;
+          border-top: .8125rem solid transparent;
+          content: '';
+          position: absolute;
+          right: 0;
+          top: 0;
+          transition: all .25s;
+        }
+
+        &:hover {
+          background-color: $yellow;
+          color: $dove-gray;
+
+          &::after {
+            border-left: .625rem solid $yellow;
+          }
         }
       }
     }
