--- a/aboutme.css
+++ b/aboutme.css
@@ -143,7 +143,7 @@ body {
         flex-wrap: wrap; }
         body .right .section .interests li {
           padding: 5px 8px;
-          background-color: rgba(255, 222, 8, 0.5);
+          background-color: #ffec6e;
           margin-right: 1rem;
           border-radius: 5px;
           margin-bottom: 0.5rem; }
